--- a/Project1024.Wasm/wwwroot/index.html
+++ b/Project1024.Wasm/wwwroot/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Project1024.Wasm</title>
     <base href="/" />
+    <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="lib/MaterialDesign-Webfont/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Project1024.Wasm.styles.css" rel="stylesheet" />
@@ -30,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
