--- a/Project1024.Wasm/wwwroot/index.html
+++ b/Project1024.Wasm/wwwroot/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Project1024.Wasm</title>
+    <title>Project 1024</title>
     <base href="/" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
     <link href="lib/MaterialDesign-Webfont/css/materialdesignicons.min.css" rel="stylesheet">
@@ -26,8 +26,8 @@
     </div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        出现未处理的错误。
+        <a href="" class="reload">重新载入</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
