--- a/Project1024.Wasm/wwwroot/index.html
+++ b/Project1024.Wasm/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>Project 1024</title>
     <base href="/" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
-    <link href="lib/MaterialDesign-Webfont/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="lib/MaterialDesign-Webfont/css/materialdesignicons.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Project1024.Wasm.styles.css" rel="stylesheet" />
@@ -32,6 +32,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
+    <script src="lib/swiper/swiper-element-bundle.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
