--- a/Project1024.Wasm/wwwroot/index.html
+++ b/Project1024.Wasm/wwwroot/index.html
@@ -10,7 +10,9 @@
     <link href="lib/MaterialDesign-Webfont/css/materialdesignicons.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <!-- Uncomment to allow CSS isolation bundling.
     <link href="Project1024.Wasm.styles.css" rel="stylesheet" />
+    -->
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
